2000-12-16  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-canvas-group.*: Base class for canvas groups
	* src/display/nr-primitives.*: Graphic primitives

2000-12-15  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-canvas.*: Experimental new rendering stuff (not working)
	* src/display/nr-canvas-item.*: Ditto (not working)
	* src/display/nr-svp.*: Ditto (works)
	* src/display/nr-svp-uncross.*: Ditto (works)
	* src/display/nr-svp-render.*: Not working yet

	* configure.in: Added {with|without}-new-render switch

2000-11-30  Szabolcs Ban  <shooby@gnome.hu>

	* glade/toolbox.c: corrected "zom factor" to "zoom factor"

2000-11-30  Szabolcs Ban  <shooby@gnome.hu>

	* configure.in (ALL_LINGUAS): add hu.

2000-11-26  Lauris Kaplinski  <lauris@helixcode.com>

	* src/toolbox.c (sp_maintoolbox_create): Strip toolbox names
	(sp_toolbox_create_widgets): Make windows toplevel

	* glade/*.glade: Make windows to be toplevel

2000-11-25  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* debian/: added the debian scripts from package maintainer,
	Davide Puricelli <evo@debian.org>

2000-11-17  Yuri Syrota  <rasta@renome.rovno.ua>

	* glade/transformation.c
	* glade/transformation.glade: correct "vertival move" to "vertical move"
	
2000-11-17  Lauris Kaplinski  <lauris@helixcode.com>

	* src/dialogs/text/edit.c (sp-text-dialog-close): Destroy
	dialog, so font listing will be regenerated

2000-11-02  Michael Meeks  <michael@helixcode.com>

	* configure.in: Check for bonobo >= 0.27

2000-10-27  Michael Meeks  <michael@helixcode.com>

	* configure.in (ALL_LINGUAS): add pt_BR.

2000-10-26  Lauris Kaplinski  <lauris@helixcode.com>

	* configure.in: Define libxml include path

	* src/Makefile.am: Use libxml include path

	* src/main.c: Ditto

	* src/xml/Makefile.am: Ditto

	* src/xml/repr-io.c: Ditto

2000-10-21  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in: Added pl to ALL_LINGUAS.

2000-10-21  Zbigniew Chyla  <cyba@gnome.pl>
