@@ -13,6 +13,8 @@
 
 typedef struct _NRCanvas NRCanvas;
 typedef struct _NRCanvasClass NRCanvasClass;
+typedef struct _NRGraphicCtx NRGraphicCtx;
+typedef struct _NRDrawingArea NRDrawingArea;
 
 #define NR_TYPE_CANVAS (nr_canvas_get_type ())
 #define NR_CANVAS(o) (GTK_CHECK_CAST ((o), NR_TYPE_CANVAS, NRCanvas))
@@ -22,6 +24,7 @@ typedef struct _NRCanvasClass NRCanvasClass;
 
 #include <gtk/gtktypeutils.h>
 #include <gtk/gtkobject.h>
+#include "nr-primitives.h"
 #include "nr-canvas-item.h"
 
 struct _NRCanvas {
@@ -31,7 +34,18 @@ struct _NRCanvas {
 
 struct _NRCanvasClass {
 	GtkObjectClass parent_class;
+	/* Creates new CanvasItem of type instance */
 	NRCanvasItem * (* create_item) (NRCanvas * canvas, NRCanvasItem * parent, GtkType type);
+	/* Requests that canvas will be updated (either in sync or async) */
+	void (* request_update) (NRCanvas * canvas);
+};
+
+struct _NRGraphicCtx {
+	NRAffine transform;
+};
+
+struct _NRDrawingArea {
+	NRIRect rect;
 };
 
 GtkType nr_canvas_get_type (void);
@@ -43,5 +57,14 @@ NRCanvasItem * nr_canvas_get_root (NRCanvas * canvas);
 /* This is here because we use class method internally */
 
 NRCanvasItem * nr_canvas_item_new (NRCanvasItem * parent, GtkType type);
+
+/* To be used solely by Canvas implementations */
+void nr_canvas_invoke_request_update (NRCanvas * canvas);
+/* Returns new highest state common for all canvas items */
+NRCanvasItemState nr_canvas_invoke_update (NRCanvas * canvas, NRGraphicCtx * ctx, NRCanvasItemState state, guint32 flags);
+/* To be used solely by Canvas implementations */
+void nr_canvas_invoke_render (NRCanvas * canvas, NRDrawingArea * area);
+/* To be used solely by Canvas implementations */
+NRCanvasItem * nr_canvas_invoke_pick (NRCanvas * canvas, NRPoint * point);
 
 #endif
