@@ -1,3 +1,11 @@
+2000-12-17  Lauris Kaplinski  <lauris@helixcode.com>
+
+	* src/display/nr-primitves.h: typedef NRPoint
+
+	* src/display/nr-canvas.*: More code
+	* src/display/nr-canvas-item.*: Ditto
+	* src/display/nr-canvas-group.*: Ditto
+
 2000-12-16  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* src/display/nr-canvas-group.*: Base class for canvas groups
